--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ const year = new Date().getFullYear();
             <li class="icon__btn"><a class="icon__link" href="https://knbyte.github.io./" target="_blank"><span class="mail-icon">Linktree</span></a></li>
             <li class="icon__btn"><a class="icon__link" href="https://www.linkedin.com/in/kai-aydan-north/" target="_blank"><span class="linked-in">LinkedIn</span></a></li>
         </ul>
-        <small>&copy; {year} Milky-Way by <a class="footer__link" href="https://github.com/ttomczak3">ttomczak</a>. All Rights Reserved.</small>
+        <small>&copy; {year} Portfolio by <a class="footer__link" href="https://github.com/knbyte">Kai Aydan North</a>. All Rights Reserved.</small>
     </div>
 </footer>
 
